--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PORTFOLIO</title>
-  <meta name="description" content="サイトの説明">
-  <meta name="keywords" content="キーワード">
+  <title>Sachiko Takahashi Portfolio</title>
+  <meta name="description" content="TechAcademyオンラインブートキャンプ提出課題。高橋幸子のポートフォリオ。">
+  <meta name="keywords" content="高橋幸子,ポートフォリオ,TechAcademy,オンラインブートキャンプ">
   <!-- BootstrapのCSS読み込み -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <!-- jQuery読み込み -->
